# rag-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_llm.py  test_slm.py
docs/: AI_AGENT_USAGE.md  ARCHITECTURE.md  COMMANDS.md  DECISIONS.md  KNOWN_ISSUES.md  PROJECT_CONTEXT.md  RAG_GUIDE.md  RAG_USAGE_FOR_AGENT.md  README.md  ROADMAP.md  STORAGE_FORMAT.md  STRUCTURE.md  USAGE.md
rag_project/: cli.py  config.py  freshness.py  graph.py  ingest.py  llm.py  paths.py  query.py  scanner.py  sync.py
rag_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rag_project/scanners/: dictionary.yml  laravel.yml
scripts/: ingest.py  query.py  sync_docs.py
